Refactor README for clarity and structure; update main.py to enhance authentication feedback; modify pyproject.toml for workspace configuration

--- a/tower-teachers/pyproject.toml
+++ b/tower-teachers/pyproject.toml
@@ -8,3 +8,8 @@ dependencies = [
     "specklepy>=3.2.3",
     "python-dotenv>=1.0.0",
 ]
+
+[tool.uv.workspace]
+members = [
+    "03-specklepy",
+]
